chat/httproute-openwebui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: default
spec:
  parentRefs:
    - {name: cluster-gateway, namespace: istio-system, sectionName: https-openwebui}
  hostnames: ["chat.gd03.me"]
  rules:
    - backendRefs: [{name: open-webui, port: 8080}]
