chat/openwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "500m"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: open-webui
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  namespace: default
spec:
  parentRefs:
    - {name: cluster-gateway, namespace: istio-system, sectionName: https-openwebui}
  hostnames: ["chat.gd03.me"]
  rules:
    - backendRefs: [{name: open-webui, port: 80}]
